@@ -2,6 +2,7 @@
     function (formula, data, distance = "euclidean", comm = NULL, 
               add = FALSE, dfun = vegdist, metaMDSdist = FALSE, ...) 
 {
+    EPS <- sqrt(.Machine$double.eps)
     if (!inherits(formula, "formula")) 
         stop("Needs a model formula")
     if (missing(data)) {
@@ -34,7 +35,7 @@
     inertia <- paste("squared", inertia, "distance")
     if (add) 
         inertia <- paste(inertia, "(euclidified)")
-    k <- attr(X, "Size") - 1
+    k <- attr(X, "Size") - 1 
     if (max(X) >= 4 + .Machine$double.eps) {
         inertia <- paste("mean", inertia)
         adjust <- 1
@@ -43,17 +44,26 @@
         adjust <- k
     }
     nm <- attr(X, "Labels")
-    X <- cmdscale(X, k = k, eig = TRUE, add = add)
+    ## cmdscale is only used if 'add = TRUE': it cannot properly
+    ## handle negative eigenvalues and therefore we normally use
+    ## wcmdscale. If we have 'add = TRUE' there will be no negative
+    ## eigenvalues and this is not a problem.
+    if (add)
+        X <- cmdscale(X, k = k, eig = TRUE, add = add)
+    else
+        X <- wcmdscale(X, eig = TRUE)
     if (is.null(rownames(X$points))) 
         rownames(X$points) <- nm
     X$points <- adjust * X$points
-    neig <- min(which(X$eig < 0) - 1, k)
+    X$eig <- adjust * X$eig
+    tot.chi <- sum(X$eig) 
+    neig <- min(which(X$eig < 0) - 1, sum(X$eig > EPS))
     sol <- X$points[, 1:neig]
     fla <- update(formula, sol ~ .)
     environment(fla) <- environment()
     d <- ordiParseFormula(fla, data, envdepth = 1)
     sol <- rda.default(d$X, d$Y, d$Z, ...)
-    sol$tot.chi <- sol$tot.chi
+    sol$tot.chi <- tot.chi
     if (!is.null(sol$CCA)) {
         colnames(sol$CCA$u) <- colnames(sol$CCA$biplot) <- names(sol$CCA$eig) <-
             colnames(sol$CCA$wa) <- colnames(sol$CCA$v) <-
@@ -62,6 +72,14 @@
     if (!is.null(sol$CA)) {
         colnames(sol$CA$u) <- names(sol$CA$eig) <- colnames(sol$CA$v) <-
             paste("MDS", 1:ncol(sol$CA$u), sep = "")
+        ## Add negative eigenvalues to the list and update tot.chi
+        poseig <- length(sol$CA$eig)
+        if (any(X$eig < 0)) {
+            negax <- X$eig[X$eig < 0]
+            names(negax) <- paste("NEG", seq_along(negax), sep="")
+            sol$CA$eig <- c(sol$CA$eig, negax)
+            sol$CA$tot.chi <- abs(sum(sol$CA$eig))
+        }
     }
     if (!is.null(comm)) {
         comm <- scale(comm, center = TRUE, scale = FALSE)
@@ -76,7 +94,7 @@
         }
         if (!is.null(sol$CA)) {
             sol$CA$v.eig <- t(comm) %*% sol$CA$u/sqrt(k)
-            sol$CA$v <- sweep(sol$CA$v.eig, 2, sqrt(sol$CA$eig), 
+            sol$CA$v <- sweep(sol$CA$v.eig, 2, sqrt(sol$CA$eig[1:poseig]), 
                               "/")
         }
     }
