@@ -4,6 +4,15 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.16-19 (opened May 14, 2009)
 
+	* capscale: handles now negative eigenvalues with semimetric
+	indices. These cause no more warnings. The MDS engine is now
+	'wcmdscale' instead of 'cmdscale' unless 'add = TRUE' was
+	specified (and then negative eigenvalues are not produced). The
+	negative eigenvalues are listed after positive unconstrained
+	eigenvalues, but no scores are given for them. The total inertia
+	and the total unconstrained inertia are now sums of all
+	eigenvalues, including the negative ones.
+
 	* wcmdscale: remove zero eigenvalues, keep negative, and do not
 	assume that the last eigenvalue is zero. 
 
